--- a/d/css/original.css
+++ b/d/css/original.css
@@ -69,20 +69,32 @@ body {
 	width: calc(100% / 7);
 	height: 100%;
 }
-.dayonce{
+.daywapper{
     width: 100%;
     height: 100%;
-    display: -webkit-flex;
+    /*display: -webkit-flex;
     display: flex;
     -webkit-justify-content: flex-end;
     justify-content: flex-end;
     -webkit-align-items: flex-end;
-    align-items: flex-end;
+    align-items: flex-end;*/
     -moz-transition: -moz-transform 0.1s linear;
     -webkit-transition: -webkit-transform 0.1s linear;
     -o-transition: -o-transform 0.1s linear;
     -ms-transition: -ms-transform 0.1s linear;
     transition: transform 0.1s linear;
+}
+.daystring{
+    width:  100%;
+    height: calc(100% / 3);
+    font-size: 1.2vw !important;
+    text-align: center;
+    
+    
+}
+.soi{
+    width:100%;
+    height: calc(100%/3);
 }
 .dayonceedit{
     position: relative;
@@ -95,13 +107,18 @@ body {
     background-color: white;
 }
 .date{
-	position: absolute;
     width: auto;
+    position: absolute;
 	font-size: 2.6vw;
 	font-weight: bold;
 	color:black;
     padding-right: 1.5%;
 	z-index: 1;
+}
+.smalls{
+    font-size: 1.1vw;
+    margin-top: 5%;
+    margin-left: 5%;
 }
 .dateherf{
     height: 50%;
