--- a/d/css/original.css
+++ b/d/css/original.css
@@ -61,7 +61,7 @@ body {
 	font-size: 1vw;
 	position: relative;
 }
-.days{
+.OneMonthdays{
     display: flex;
 	height:19%;
 }
@@ -72,53 +72,49 @@ body {
 .daywapper{
     width: 100%;
     height: 100%;
-    /*display: -webkit-flex;
+    position: relative;
     display: flex;
-    -webkit-justify-content: flex-end;
     justify-content: flex-end;
-    -webkit-align-items: flex-end;
-    align-items: flex-end;*/
-    -moz-transition: -moz-transform 0.1s linear;
-    -webkit-transition: -webkit-transform 0.1s linear;
-    -o-transition: -o-transform 0.1s linear;
-    -ms-transition: -ms-transform 0.1s linear;
+    align-items: flex-end;
     transition: transform 0.1s linear;
 }
-.daystring{
-    width:  100%;
-    height: calc(100% / 3);
-    font-size: 1.2vw !important;
-    text-align: center;
-    
-    
-}
-.soi{
-    width:100%;
-    height: calc(100%/3);
-}
-.dayonceedit{
-    position: relative;
-	z-index: 400;
-    -webkit-transform: scale(2.0);
-    -moz-transform: scale(2.0);
-    -o-transform: scale(2.0);
-    -ms-transform: scale(2.0);
-    transform: scale(2.0);
-    background-color: white;
-}
-.date{
-    width: auto;
-    position: absolute;
-	font-size: 2.6vw;
+.dayarea{
+    width: 100%;
+    height: 100%;
 	font-weight: bold;
-	color:black;
     padding-right: 1.5%;
 	z-index: 1;
 }
-.smalls{
-    font-size: 1.1vw;
+.daystring{
+    width: 100%;
+    height: 30%;
+    font-size: 0.9vw;
     margin-top: 5%;
     margin-left: 5%;
+}
+.daystringinput{
+    width: 80%;
+    height: 30%;
+    font-size: 0.4vw;
+    margin-top: 5%;
+    margin-left: 5%;
+}
+.daystringinput input{
+    font-size: 0.3vw;
+    height: 50%;
+    width: 100%;
+    padding-left:5%;
+}
+.daynumber{
+    width: 90%;
+    height: 70%;
+    font-size: 2.6vw;
+    text-align: right;
+}
+.dayonceedit{
+	z-index: 400;
+    transform: scale(2.0);
+    background-color: white;
 }
 .dateherf{
     height: 50%;
@@ -138,21 +134,14 @@ body {
 .sunday{
 	color:#F44336;
 }
-.caledit{
-	width: 100%;
-	height: 100%;
+.caleditOnMouse{
+    width: 100%;
+    height: 100%;
 	background-color: rgba(0,0,0,0.3);
-	top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-	position: relative;
+	position: absolute;
 	z-index: 200;
-    display: -webkit-flex;
     display: flex;
-    -webkit-justify-content: center;
     justify-content: center;
-    -webkit-align-items: stretch;
     align-items: center;
     cursor: pointer;
 }
