--- a/d/css/original.css
+++ b/d/css/original.css
@@ -31,8 +31,8 @@ body {
     bottom: 0;
     right: 0;
     margin-top: 8px;
-    background-image: url("../img/nya.jpg");
     background-size:100% 100%;
+    background-blend-mode:lighten;
 }
 .monthline{
     width: 100%;
